// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DogCard should have match the correct snapshot 1`] = `
<Link
  className="DogCard-container"
  key="6"
  replace={false}
  to="/dog/undefined"
>
  <div
    className="dog-name"
  >
    Butch
  </div>
  <div
    className="dog-age"
  >
    Age: 
    Young
  </div>
  <div
    className="dog-distance"
  >
    Location: 
    17.0 mi
     away
  </div>
  <div
    className="search-img-container"
  >
    <img
      alt="dog from shelter"
      className="dog-img"
      src="photoUrl"
    />
  </div>
</Link>
`;

exports[`DogCard should have match the correct snapshot when the dog has multiple names 1`] = `
<Link
  className="DogCard-container"
  key="6"
  replace={false}
  to="/dog/undefined"
>
  <div
    className="dog-name"
  >
    Butch
  </div>
  <div
    className="dog-age"
  >
    Age: 
    Young
  </div>
  <div
    className="dog-distance"
  >
    Location: 
    17.0 mi
     away
  </div>
  <div
    className="search-img-container"
  >
    <img
      alt="dog from shelter"
      className="dog-img"
      src="photoUrl"
    />
  </div>
</Link>
`;

exports[`DogCard should have match the correct snapshot when the dog has no name 1`] = `
<Link
  className="DogCard-container"
  key="6"
  replace={false}
  to="/dog/undefined"
>
  <div
    className="dog-name"
  />
  <div
    className="dog-age"
  >
    Age: 
    Young
  </div>
  <div
    className="dog-distance"
  >
    Location: 
    17.0 mi
     away
  </div>
  <div
    className="search-img-container"
  >
    <img
      alt="dog from shelter"
      className="dog-img"
      src="photoUrl"
    />
  </div>
</Link>
`;
